# qaguru_advanced_1_2

./: .env.example  README.md  main.py  pyproject.toml
app/: database.py  main.py
app/database/: engine.py  users.py
app/models/: AppStatus.py  User.py
app/routers/: status.py  users.py
app/routes/: status.py  users.py
models/: AppStatus.py  User.py
tests/: conftest.py  test_api.py  test_methods.py  test_pagination.py  test_smoke.py
