[tool.poetry]
name = "qaguru-advanced-1-2"
version = "0.1.0"
description = ""
authors = ["Dimitri Maksimov <dmitry-maksimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
fastapi = "^0.115.6"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic = "^2.10.5"
fastapi-pagination = "^0.12.34"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.37"
sqlmodel = "^0.0.22"
faker = "^35.0.0"

[tool.pytest.ini_options]
addopts = "-s -v"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
